[apiserver] add error endpoint for getting the next error
