# apiserver/src/main/resources/bob/api.yaml
@@ -654,6 +654,33 @@ paths:
                 unhealthy:
                   value:
                     message: "Query failed: <Error>"
+  /error:
+    get:
+      operationId: GetError
+      summary: Fetches the next available system error
+
+      responses:
+        "200":
+          description: Successful fetch
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SimpleResponse"
+              examples:
+                sucess:
+                  value:
+                    message: "errors"
+
+        default:
+          description: Failed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SimpleResponse"
+              examples:
+                unhealthy:
+                  value:
+                    message: "<Some Error>"
 
 components:
   schemas:
